[package]
name = "chemistru-raw"
author = "Ross Morgan <rmorgan512@protonmail.ch>"

license = "GPL-v3.0"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemistru-elements = "0.*"
lazy_static = "1.4.0"
serde_json = { version = "1.0.108", features = ["preserve_order"] }
